<resources>
    <string name="app_name">D-Calc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add">Add</string>
    <string name="title_activity_cadastro__d">Cadastro_D</string>
    <string name="nome_da_disciplina">Nome da Disciplina</string>
    <string name="ex_algebra_linear">Ex: Algebra Linear</string>
    <string name="equa_ao">Equaçao</string>
    <string name="ex_p1_p2_p3_p4_4">Ex: ((P1 + P2 + P3 + P4)/4)</string>
    <string name="confirmar">Confirmar</string>
    <string name="title_activity_disciplina__view">Disciplina_View</string>
    <string name="nota_obejtivo">Nota Obejtivo</string>
    <string name="_100">100</string>
</resources>
